--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "azure-iot-edge.defaultPlatform": {
         "platform": "arm32v7",
         "alias": null
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
