--- a/gateway/modules/GatewayCore/GatewayCore.csproj
+++ b/gateway/modules/GatewayCore/GatewayCore.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CommonLibrary\CommonLibrary.csproj" />
+    <ProjectReference Include="..\..\common-library\CommonLibrary.csproj" />
   </ItemGroup>
  
 </Project>
