--- a/backend/.env
+++ b/backend/.env
@@ -12,6 +12,8 @@ COSMO_DB_NAME = "IotMonitoring"
 COSMO_DB_HOST = "iotmonitoring.mongo.cosmos.azure.com"
 COSMO_DB_PORT = 10255
 
-FTP_SRV_ADDRESS = "0.0.0.0"
-FTP_SRV_PORT = 21
+FTP_SRV_PORT = 8880
+FTP_SRV_PASV_ADDRESS = "mgonzalez738.ddns.net"
+FTP_SRV_PASV_PORT_MIN = 8881
+FTP_SRV_PASV_PORT_MAX = 8892
 FTP_SRV_IMPORT_PATH = "import"
