--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,6 @@ FTP_SRV_PASV_DNS = "mgonzalez738.ddns.net"
 FTP_SRV_PASV_PORT_MIN = 8881
 FTP_SRV_PASV_PORT_MAX = 8892
 FTP_SRV_IMPORT_PATH = "import"
+
+DEVICE_DISC_CAMPBELL = "Campbell"
+DEVICE_DISC_AZURE = "Azure"
