--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
+NODE_ENV = "development"
+
 PORT = 3000
 
 IOT_HUB_HOST = "MonitoringHub.azure-devices.net"
@@ -20,4 +22,5 @@ FTP_SRV_IMPORT_PATH = "import"
 
 JWT_SECRET = gdfx5g45g4sdf5g4df54fx5d
 JWT_EXPIRE = 30d
+JWT_COOKIE_EXPIRE = 30
 
