--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "azure-iothub": "^1.12.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csv-parser": "^2.3.3",
     "dateformat": "^3.0.3",
