--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "azure-iothub": "^1.12.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parser": "^2.3.3",
     "dateformat": "^3.0.3",
     "dns": "^0.2.2",
