--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,8 @@
     "multer": "^1.4.2",
     "numeral": "^2.0.6",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "promise-retry": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
