--- a/backend/.env
+++ b/backend/.env
@@ -24,9 +24,9 @@ JWT_SECRET = gdfx5g45g4sdf5g4df54fx5d
 JWT_EXPIRE = 30d
 JWT_COOKIE_EXPIRE = 30
 
-SMTP_HOST = smtp.sendgrid.net
+SMTP_HOST = smtp.mailtrap.io
 SMTP_PORT = 587
-SMTP_USER = apikey
-SMTP_PASSWORD = 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
+SMTP_USER = cd474a9d6a8733
+SMTP_PASSWORD = 141f52cde555bd
 SMTP_FROM_EMAIL = noreplay@iotmonitoring.io
 SMTP_FROM_NAME = IoT Monitoring
