--- a/device/platformio.ini
+++ b/device/platformio.ini
@@ -12,5 +12,8 @@
 platform = espressif32
 board = alksesp32
 framework = arduino
-lib_deps = vschina/ESP32 Azure IoT Arduino@^0.1.0
+lib_deps = 
+	vschina/ESP32 Azure IoT Arduino@^0.1.0
+	adafruit/DHT sensor library@^1.4.0
+	adafruit/Adafruit Unified Sensor@^1.1.4
 monitor_speed = 115200
