--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.0",
     "mongoose": "^5.10.6",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "numeral": "^2.0.6",
